--- a/backend-api/pyproject.toml
+++ b/backend-api/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.114.1"
 uvicorn = "^0.30.6"
 pytest = "^8.3.3"
 httpx = "^0.27.2"
+boto3 = "^1.35.17"
+werkzeug = "^3.0.4"
 
 
 [build-system]
