--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
       - "4566:4566"
       - "4510-4559:4510-4559"
   backend-api:
-    image: boilerplate/backend-api
+    build:
+      context: backend-api
     ports:
       - "8000:8000"
     env_file:
