--- a/aws-bootstrapper/pyproject.toml
+++ b/aws-bootstrapper/pyproject.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Alessandro Bolletta <alexpacio91@gmail.com>"]
 readme = "README.md"
+include=['infra']
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.9"
 pulumi-local = "^1.2.2"
 awscli-local = "^0.22.0"
 awscli = "^1.34.17"
