--- a/.env-example
+++ b/.env-example
@@ -2,4 +2,11 @@ DYNAMODB_TABLE=my-table
 S3_BUCKET=my-bucket
 
 # use the following only if you're using Localstack
-LOCALSTACK_HOST=localstack
+LOCALSTACK_HOST=http://interview-challenge-localstack-1:4566
+
+AWS_ACCESS_KEY_ID=my-client-id
+AWS_SECRET_ACCESS_KEY=my-client-secret
+AWS_REGION=us-east-1
+
+PULUMI_ACCESS_TOKEN=
+PULUMI_STACK_NAME=backend-api
