--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,12 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    depends_on:
+      - localstack
+  pulumi:
+    build:
+      context: aws-bootstrapper
+    env_file:
+      - .env
+    depends_on:
+      - pulumi
