--- a/helm/templates/deployment-backend-api.yaml
+++ b/helm/templates/deployment-backend-api.yaml
@@ -19,7 +19,12 @@ spec:
             - sh
             - -c
             - |
-              echo "Waiting for Pulumi Job completion..." &&               while [ "$(kubectl get configmap pulumi-status -o jsonpath='{.data.completed}')" != "true" ]; do                 echo "Pulumi not completed yet...";                 sleep 5;               done
+              echo "Waiting for Pulumi Job completion..."
+              while [ "$(kubectl get configmap pulumi-status -o jsonpath='{.data.completed}')" != "true" ]; do
+                echo "Pulumi not completed yet...";
+                sleep 5;
+              done
+              echo "Pulumi Job completed!"
       containers:
         - name: backend-api
           image: {{ .Values.backendApi.image }}
