fix: issues with env variable referencing using pulumi and localstack

--- a/.env-example
+++ b/.env-example
@@ -2,7 +2,7 @@ DYNAMODB_TABLE=my-table
 S3_BUCKET=my-bucket
 
 # use the following only if you're using Localstack
-LOCALSTACK_HOST=http://interview-challenge-localstack-1:4566
+LOCALSTACK_HOST=http://localstack:4566
 
 AWS_ACCESS_KEY_ID=my-client-id
 AWS_SECRET_ACCESS_KEY=my-client-secret
