--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
     ports:
       - "4566:4566"
       - "4510-4559:4510-4559"
-  backend-api:
+  backend-svc:
     build:
-      context: backend-api
+      context: backend-svc
     ports:
       - "8000:8000"
     env_file:
@@ -15,7 +15,7 @@ services:
       - localstack
   pulumi:
     build:
-      context: aws-bootstrapper
+      context: pulumi
     env_file:
       - .env
     depends_on:
