--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: python-aws-backend-api
+name: python-aws-backend-svc
 description: A Helm chart for deploying LocalStack, Backend API, and Pulumi
 version: 0.1.0
 appVersion: "1.0"
