--- a/helm/templates/deployment-backend-api.yaml
+++ b/helm/templates/deployment-backend-api.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-api
+  name: backend-svc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: backend-api
+      app: backend-svc
   template:
     metadata:
       labels:
-        app: backend-api
+        app: backend-svc
     spec:
       containers:
-        - name: backend-api
+        - name: backend-svc
           image: {{ .Values.backendApi.image }}
           ports:
             - containerPort: 8000
