--- a/helm/templates/service-backend-api.yaml
+++ b/helm/templates/service-backend-api.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-api
+  name: backend-svc
 spec:
   selector:
-    app: backend-api
+    app: backend-svc
   ports:
     - protocol: TCP
       port: 8000
