--- a/backend-svc/pyproject.toml
+++ b/backend-svc/pyproject.toml
@@ -14,6 +14,9 @@ pytest = "^8.3.3"
 httpx = "^0.27.2"
 boto3 = "^1.35.17"
 werkzeug = "^3.0.4"
+pydantic = "^2.9.1"
+requests = "^2.32.3"
+python-multipart = "^0.0.9"
 
 
 [build-system]
