--- a/helm/templates/backend-api-deployment.yaml
+++ b/helm/templates/backend-api-deployment.yaml
@@ -20,3 +20,15 @@ spec:
           envFrom:
             - configMapRef:
                 name: app-configs
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
