feat: added service accounts, reorganized utils in backend api

--- a/.env-example
+++ b/.env-example
@@ -1,12 +1,15 @@
-DYNAMODB_TABLE=my-table
-S3_BUCKET=my-bucket
+DYNAMODB_TABLE=svc-table
+S3_BUCKET=svc-bucket
+IAM_USER_NAME=backendsvcuser
+IAM_USER_ACCESS_KEY_OBJ_NAME=backendsvckeyobj
 
 # use the following only if you're using Localstack
 LOCALSTACK_HOST=http://localstack:4566
 
+# use the following only if you're using a real AWS Account
 AWS_ACCESS_KEY_ID=my-client-id
 AWS_SECRET_ACCESS_KEY=my-client-secret
 AWS_REGION=us-east-1
 
 PULUMI_ACCESS_TOKEN=
-PULUMI_STACK_NAME=backend-svc
+PULUMI_STACK_NAME=
