--- a/pulumi/infra/requirements.txt
+++ b/pulumi/infra/requirements.txt
@@ -6,6 +6,7 @@ parver==0.5
 protobuf==4.25.4
 pulumi==3.132.0
 pulumi_aws==6.51.0
+pulumi-kubernetes==4.18.1
 PyYAML==6.0.2
 semver==2.13.0
 setuptools==74.1.2
