feat: scripts rework, e2e tests now work properly, localstack is now ephimeral

--- a/.env-example
+++ b/.env-example
@@ -12,4 +12,4 @@ AWS_SECRET_ACCESS_KEY=my-client-secret
 AWS_REGION=us-east-1
 
 PULUMI_ACCESS_TOKEN=
-PULUMI_STACK_NAME=
+PULUMI_STACK_NAME=<pulumi_orgname>>/python-boilerplate/<test-e2e/prod>
