--- a/k6/k8s/job.yaml
+++ b/k6/k8s/job.yaml
@@ -19,7 +19,7 @@ spec:
             - |
               set -e
               echo "Running Pulumi deployment at $AWS_ENDPOINT_URL"
-              pulumi stack init --stack $PULUMI_STACK_NAME || true
+              poetry run pulumilocal cancel --stack $PULUMI_STACK_NAME --cwd infra --yes || true
               poetry run pulumilocal refresh --stack $PULUMI_STACK_NAME --cwd infra --yes -f
               poetry run pulumilocal up --stack $PULUMI_STACK_NAME --cwd infra --yes -f
           envFrom:
