--- a/helm/templates/backend-api-e2etest-job.yaml
+++ b/helm/templates/backend-api-e2etest-job.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       serviceAccountName: {{ .Values.backendApi.awsServiceAccountName }}
       containers:
-        - name: backend-svc
+        - name: backend-api-e2e-test
           image: {{ .Values.backendApi.image }}
           command: ["/bin/sh", "-c", "poetry run pytest"]
           env:
