--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,4 +1,5 @@
 enableE2eTest: false
+enableBenchmark: false
 
 localstack:
   name: "localstack"
@@ -11,18 +12,21 @@ localstack:
 backendApi:
   name: "backend-svc"
   image: "localhost:32000/backend-svc:latest"
-  service:
-    ports:
-      - port: 8000
+  serviceHttpPort: 8000
   awsSecretName: aws-secret
   awsServiceAccountName: aws-service-account
+
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 50
 
 pulumi:
   name: "pulumi"
   image: "localhost:32000/pulumi:latest"
 
-autoscaling:
-  enabled: true
-  minReplicas: 2
-  maxReplicas: 10
-  targetCPUUtilizationPercentage: 50
+backendApiBenchmark:
+  name: "backend-svc-benchmark"
+  image: "localhost:32000/backend-svc-k6:latest"
+  reportOutputAbsoluteDirPath: "/tmp/prova"
